update astro index

--- a/astro-docs/src/pages/index.astro
+++ b/astro-docs/src/pages/index.astro
@@ -54,10 +54,10 @@
 			<nav>
 				<h3>Quick Links</h3>
 				<ul>
-					<li><a href="/docs">Documentation Home (this page)</a></li>
-					<li><a href="/docs/getting-started">Getting Started</a></li>
-					<li><a href="/docs/guides/installation">Installation Guide</a></li>
-					<li><a href="/">Back to Main Site (Next.js)</a></li>
+					<li><a href="https://next-astro-poc-xb2m.vercel.app/docs">Documentation Home (this page)</a></li>
+					<li><a href="https://next-astro-poc-xb2m.vercel.app/docs/getting-started">Getting Started</a></li>
+					<li><a href="https://next-astro-poc-xb2m.vercel.app/docs/guides/installation">Installation Guide</a></li>
+					<li><a href="https://next-astro-poc-xb2m.vercel.app/">Back to Main Site (Next.js)</a></li>
 				</ul>
 			</nav>
 			
